<resources>
    <string name="app_name">AssigmentDesign</string>
    <string name="password">Password</string>
    <string name="lupa_password">Lupa Password?</string>
    <string name="masuk">Masuk</string>
    <string name="atau_masuk_menggunakan">Atau masuk menggunakan</string>
    <string name="google">Google</string>
    <string name="facebook">Facebook</string>
    <string name="belum_punya_akun">Belum punya akun? </string>
    <string name="mendaftar">Mendaftar </string>
    <string name="chat_mi">Chat-Mi</string>
    <string name="sekarang">sekarang</string>
    <string name="back">esc</string>
    <string name="simpan">Simpan</string>
    <string name="alamat">Alamat</string>
    <string name="agama">Agama</string>
    <string name="jenis_kelamin">Jenis Kelamin</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="titik2">:</string>
</resources>