<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".activity.validasi.LoginActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins"
        android:gravity="center"
        android:text="@string/chat_mi"
        android:textSize="30sp" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/icon_chat" />


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        app:hintEnabled="false">

        <com.google.android.material.textfield.TextInputEditText
           android:id="@+id/edt_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_edtx"
            android:fontFamily="@font/poppins"
            android:hint="Username"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        app:hintEnabled="false"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_edtx"
            android:fontFamily="@font/poppins"
            android:hint="@string/password"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="5dp"
        android:gravity="end"
        android:fontFamily="@font/poppins"
        android:text="@string/lupa_password" />

    <Button
        android:id="@+id/btn_masuk"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:backgroundTint="@color/tombol"
        android:fontFamily="@font/poppins"
        android:text="@string/masuk"
        android:textColor="@color/white"
        app:cornerRadius="8dp" />

<!--    <LinearLayout-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginStart="30dp"-->
<!--        android:layout_marginTop="8dp"-->
<!--        android:layout_marginEnd="30dp"-->
<!--        android:layout_marginBottom="8dp"-->
<!--        android:orientation="horizontal">-->

<!--        <View-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="5dp"-->
<!--            android:layout_gravity="center"-->
<!--            android:layout_marginEnd="4dp"-->
<!--            android:layout_weight="5"-->
<!--            android:background="@drawable/bg_line" />-->

<!--        <TextView-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:fontFamily="@font/poppins"-->
<!--            android:text="@string/atau_masuk_menggunakan"-->
<!--            android:textColor="@color/grey" />-->

<!--        <View-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="5dp"-->
<!--            android:layout_gravity="center"-->
<!--            android:layout_marginStart="4dp"-->
<!--            android:layout_weight="5"-->
<!--            android:background="@drawable/bg_line" />-->
<!--    </LinearLayout>-->

<!--    <Button-->
<!--        android:id="@+id/btn_tb_google"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="60dp"-->
<!--        android:layout_marginStart="30dp"-->
<!--        android:layout_marginEnd="30dp"-->
<!--        android:backgroundTint="@color/white"-->
<!--        android:drawableLeft="@drawable/icon_gugel"-->
<!--        android:fontFamily="@font/poppins"-->
<!--        android:text="@string/google"-->
<!--        android:textColor="@color/red"-->
<!--        app:cornerRadius="8dp"-->
<!--        app:strokeColor="@color/red"-->
<!--        app:strokeWidth="3dp" />-->

<!--    <Button-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="60dp"-->
<!--        android:layout_marginStart="30dp"-->
<!--        android:layout_marginTop="8dp"-->
<!--        android:layout_marginEnd="30dp"-->
<!--        android:backgroundTint="@color/white"-->
<!--        android:drawableLeft="@drawable/icon_fb"-->
<!--        android:fontFamily="@font/poppins"-->
<!--        android:text="@string/facebook"-->
<!--        android:textColor="@color/blue"-->
<!--        app:cornerRadius="8dp"-->
<!--        app:strokeColor="@color/blue"-->
<!--        app:strokeWidth="3dp" />-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="30dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:text="@string/belum_punya_akun" />

        <TextView
            android:layout_marginStart="3dp"
            android:id="@+id/tv_daftar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:text="@string/mendaftar"
            android:layout_marginEnd="3dp"
            android:textColor="@color/blue" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:text="@string/sekarang" />

    </LinearLayout>
</LinearLayout>